--- a/app/views/products/_color_variant_fields.html.erb
+++ b/app/views/products/_color_variant_fields.html.erb
@@ -1,13 +1,17 @@
 
 	<fieldset style="margin: 3%;">
-		<div class="row">
-			<div class="col-md-3">
+		<div class="row" style="background-color: black; border-style: solid; border-radius: 10px; border-width: 5px; padding: 15px">
+			<h4 class="col-md-3" style="color: #D4AF37">
 				<%= f.label :color %>
-		  	<%= f.text_field :color, class: "form-control" %>
+			</h4>
+			<div class="col-md-5">
+			
+		  		<%= f.text_field :color, class: "form-control" %>
+			</div>
+			<div class="col-md-4">
 				<%= link_to_remove_association "Remove Color", f, class: "btn btn-danger" %>
 			</div>
 		</div>
 		<br>
-
 	</fieldset>
 
