--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -1,7 +1,8 @@
+
 <div class="container">
   <div class="row">
     <div class="col-md-12" align="center" style="background-color: #D4AF37; color: black; border-radius: 10px; padding: 20px">
-      <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
+      <%= simple_form_for @product, url: "#{products_path}", html: { multipart: true } do |f| %>
       
         <% if product.errors.any? %>
           <div id="error_explanation">
@@ -20,59 +21,81 @@
         </div>
 
         <div class="row form-group">
-          <div class="col-md-6">
-            <%= form.label :title, class: "pt-1 font-weight-bold" %>
-            <%= form.text_field :title, id: :product_title, class: "form-control" %>
+          <div class="col-md-4">
+            <%= f.label :title, class: "pt-1 font-weight-bold" %>
+            <%= f.text_field :title, id: :product_title, class: "form-control" %>
           </div>
-          <div class="col-md-6">
-              <%= form.label :category %>
-              <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
+          <div class="col-md-4">
+            <%= f.label :category %>
+            <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
+          </div>
+          <div class="col-md-4">
+            <%= f.label :image %>
+            <%= f.file_field :image, class: "form-control" %>
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-12">
-            <%= form.label :description, class: "pt-1 font-weight-bold" %>
-            <%= form.text_area :description, id: :product_description, class: "form-control" %>
+            <%= f.label :description, class: "pt-1 font-weight-bold" %>
+            <%= f.text_area :description, id: :product_description, class: "form-control" %>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-md-6">
-            <%= form.label :price, class: "pt-1 font-weight-bold" %>
-            <%= form.number_field :price, id: :product_price, step: 0.01, class: "form-control" %>
+          <div class="col-md-3">
+            <%= f.label :condition, class: "pt-1 font-weight-bold" %><br><br>
+            <%= f.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
           </div>
-          <div class="col-md-6">
-            <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
-            <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
+          <div class="col-md-3">
+            <%= f.label :price, class: "pt-1 font-weight-bold" %>
+            <%= f.number_field :price, id: :product_price, min: 1, step: 0.01, class: "form-control" %>
+          </div>
+          <div class="col-md-3">
+            <%= f.label :shipping_cost, class: "pt-1 font-weight-bold" %>
+            <%= f.number_field :shipping_cost, id: :product_shipping_cost, min: 1, step: 0.01, class: "form-control" %>
+          </div>
+          <div class="col-md-3">
+            <%= f.label :inventory, class: "pt-1 font-weight-bold" %>
+            <%= f.number_field :inventory, min: 1, step: 0.01, class: "form-control" %>
           </div>
         </div>
 
-        <div class="row form-group">
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :condition, class: "pt-1 font-weight-bold" %>
-            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
-          </div>
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :color, class: "pt-1 font-weight-bold" %>
-            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
-          </div>
-          <div class="col-md-3" style="margin-top: 28px;">
-            <%= form.label :size, class: "pt-1 font-weight-bold" %>
-            <%= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
-          </div>
-          <div class="col-md-3">
-            <%= form.label :image %>
-            <%= form.file_field :image, class: "form-control" %>
-          </div>
+<hr>          
+<h4>Add the available color, sizes on hand for that color, and stock quantity for each size of your product. </h4>
+        <div align="center">
+          <%= f.simple_fields_for :color_variants do |builder| %>
+              <div class="row" align="center">
+                 <%= render 'color_variant_fields', f: builder %>             
+              </div>
+
+          <% end %>
+
+          <%= link_to_add_association "Add Color", f, :color_variants, :class => "btn", :style => "background-color: black; color: #D4AF37"  %>
+        </div>
+
+          <div align="center">
+          <%= f.simple_fields_for :size_variants do |builder| %>
+              <div class="row" align="center">
+                 <%= render 'size_variant_fields', f: builder %>             
+              </div>
+
+          <% end %>
+
+
+          <%= link_to_add_association "Add size", f, :size_variants, :class => "btn", :style => "background-color: black; color: #D4AF37" %>
+
         </div>
 
         <div class="row" align="center">
-          <%= form.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
+          <%= f.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
         </div>
+      
+      </div>
 
       <% end %>
     </div>
   </div>
 </div>
+
 
