--- a/app/views/products/_size_variant_fields.html.erb
+++ b/app/views/products/_size_variant_fields.html.erb
@@ -1,10 +1,19 @@
-<fieldset>
-	<div class="col-md-3">
-		<%= f.label :size %><br><br>
-  		<%= f.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], class: "form-control" %>
-  		<%= link_to_remove_association "Remove Size", f, class: "btn btn-danger" %>
-	</div>
+<fieldset style="margin: 3%; padding: 3px">
+	<div class="row" style="background-color: black; border-style: solid; border-radius: 10px; border-width: 5px; padding: 15px";>
 
+		<h4 class="col-md-3" style="color: #D4AF37">
+			<%= f.label :size %><br><br>	
+		</h4>
+
+		<div class="col-md-5" style="margin-top: 10px">
+				<%= f.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], class: "form-control" %>
+		</div>
+
+		<div class="col-md-4">
+			<%= link_to_remove_association "Remove Size", f, class: "btn btn-danger" %>
+		</div>
+		
+	</div>
 
 
 </fieldset>
