--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,11 +1,11 @@
 <div class="row" align="center">
 	<div class="col-md-12">
-		<h1 style="color: #D4AF37">New Product</h1>
+		<h1 style="color: #D4AF37">Sell Yor Product</h1>
 	</div>
 </div>
 
 
 <%= render 'form_new', product: @product %>
 
-<%= link_to 'Back', products_path, :style => "color: #D4AF37;" %>
+<%= link_to 'Back To Products', products_path, :class => "btn", :style => "color: black; background-color: #D4AF37; margin: 3%;" %>
 </div>
