clean up sub start

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -15,7 +15,7 @@
           </div>
         <% end %>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 15px">
           <div class="col-md-6">
             <%= form.label :title %>
             <%= form.text_field :title, id: :business_title, class: "form-control" %>
@@ -26,14 +26,14 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 15px">
           <div class="col-md-12">
             <%= form.label :description %>
             <%= form.text_area :description, id: :business_description, class: "form-control" %>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 15px">
           <div class="col-md-4">
             <%= form.label :business_address %>
             <%= form.text_field :address, id: :business_address, class: "form-control" %>
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 15px">
           <div class="col-md-4">
             <%= form.label :business_email %>
             <%= form.text_field :email, id: :business_email, class: "form-control" %>
@@ -63,7 +63,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row" style="margin-bottom: 15px">
           <div class="col-md-12">
             <%= form.label :business_hours %>
             <%= form.text_area :hours, id: :business_hours, class: "form-control" %>            
