--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,6 +1,7 @@
 <div class="row" align="center">
 	<div class="col-md-12">
-		<h1 style="color: #D4AF37">New Business</h1>
+		<h1 style="color: #D4AF37">Register Your Business</h1>
+		<p style="color: #D4AF37">Thank you for registering your business to The Black Woman Is God Stores! We hope our great community adds to your success!</p>
 	</div>
 </div>
 
