--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -1,5 +1,5 @@
 <div class="center">
-  <h2>Your Sales History:</h2>
+  <h2 style="color: #D4AF37">Your Sales History:</h2>
 </div>
 
 <table class="table" align="center">
