--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div class="row" align="center">
+        <div class="row" align="center" style="margin-top: 3%">
           <%= f.submit :class => "btn", :style => "background-color: black; color: #D4AF37" %>
         </div>
       
