--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -62,7 +62,7 @@
 
 <hr>          
       <div>
-            <h4>Add the available Colors</h4>
+            <h4>Add all available Colors</h4>
           </div>
           
         <div align="center">
@@ -78,7 +78,7 @@
         </div>
 <hr>
             <div>
-              <h4>Add the available Sizes</h4>
+              <h4>Add all available Sizes</h4>
             </div>
           <div align="center">
 
