--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -131,7 +131,7 @@
                                      
                                     <ul class="dropdown-menu" role="menu">
                                           <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
-                                          <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure? Once you delete your product, you will not be able to get it back!" }, class: "btn btn-link" %></li>
+                                          <li><%= link_to 'Delete', product, method: :delete, data: { confirm: "Are you sure? Once you delete your product, you will not be able to get it back!" }, class: "btn btn-link" %></li>
                                     <% end %>
                                     </ul>
                               </div>
