--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -85,7 +85,7 @@
 
     <div class="col-md-9" style="padding: 20px; border-left: solid; border-width: 1px;" align="center">
             <% @products.each do |product| %>
-              <% unless @product.inventory = nil %>
+              <% unless product.inventory == nil %>
 
                 <div  id="t_backdrop">
                     <div class="col-md-3" style=" height: 100% !important">
