--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -8,4 +8,4 @@
 
 <%= render 'form', business: @business %>
 
-<%= link_to 'Back', businesses_path %>
+<%= link_to 'Back', businesses_path, class: 'btn', style: 'background-color: #D4AF37; color: black;' %>
