--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row" align="center">
 	<div class="col-md-12">
-		<h1 style="color: #D4AF37">Sell Yor Product</h1>
+		<h1 style="color: #D4AF37">Sell Your Product</h1>
 	</div>
 </div>
 
