--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -22,7 +22,7 @@
         <div class="row form-group">
           <div class="col-md-4">
             <%= f.label :title, class: "pt-1 font-weight-bold" %>
-            <%= f.text_field :title, id: :product_title, class: "form-control" %>
+            <%= f.text_field :title, id: :product_title, :maxlength => 50, class: "form-control" %>
           </div>
           <div class="col-md-4">
             <%= f.label :category %>
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col-md-12">
             <%= f.label :description, class: "pt-1 font-weight-bold" %>
-            <%= f.text_area :description, id: :product_description, class: "form-control" %>
+            <%= f.text_area :description, id: :product_description, :maxlength => 500, class: "form-control" %>
           </div>
         </div>
 
