countdown page update

--- a/app/views/pages/countdown.html.erb
+++ b/app/views/pages/countdown.html.erb
@@ -4,7 +4,7 @@
 
 
 <div align="center" class="row">
-<iframe class="embed-responsive-item" src="https://free.timeanddate.com/countdown/i6kfkpb9/n179/cf12/cm0/cu5/ct0/cs0/ca0/co0/cr0/ss0/cacd4af37/cpc000/pct/tcfff/fn3/fs100/szw2370/szh1000/iso2019-02-01T00:00:00" allowTransparency="true" frameborder="0" width="1060" height="200"></iframe>
+<iframe class="embed-responsive embed-responsive-16by9" src="https://free.timeanddate.com/countdown/i6kfkpb9/n179/cf12/cm0/cu5/ct0/cs0/ca0/co0/cr0/ss0/cacd4af37/cpc000/pct/tcfff/fn3/fs100/szw2370/szh1000/iso2019-02-01T00:00:00" allowTransparency="true" frameborder="0" width="1060" height="200"></iframe>
 
 
 </div>
