countdown page update

--- a/app/views/pages/countdown.html.erb
+++ b/app/views/pages/countdown.html.erb
@@ -1,10 +1,13 @@
 <div align="center" class="row" >
 	<h1 align="center" style="color: #D4AF37; margin-bottom: 5%; margin-top: 15%">The Black Woman Is God Stores</h1>	
 </div>
-
+<div align="center" class="row" >
+	<h3 align="center" style="color: #D4AF37; margin-bottom: 1%; margin-top: 1%"> We Coming Back In:</h3>	
+</div>
 
 <div align="center" class="row">
-<iframe class="embed-responsive embed-responsive-16by9" src="https://free.timeanddate.com/countdown/i6kfkpb9/n179/cf12/cm0/cu5/ct0/cs0/ca0/co0/cr0/ss0/cacd4af37/cpc000/pct/tcfff/fn3/fs100/szw2370/szh1000/iso2019-02-01T00:00:00" allowTransparency="true" frameborder="0" width="1060" height="200"></iframe>
+	
+		<iframe src="https://free.timeanddate.com/countdown/i6kfkpb9/n179/cf12/cm0/cu5/ct0/cs0/ca0/co0/cr0/ss0/cacd4af37/cpc000/pct/tcfff/fn3/fs100/szw1185/szh500/iso2019-02-01T00:00:00" allowTransparency="true" frameborder="0" width="534" height="100"></iframe>
 
-
+	
 </div>
