--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
   </head>
 
   <body>
-<!--    <div class="row justify-content-center" align="center" style=" margin-left: -7.2%; margin-top: 0%; margin-bottom: 0%;">
+   <div class="row justify-content-center" align="center" style=" margin-left: -7.2%; margin-top: 0%; margin-bottom: 0%;">
    
           <div class="footer-social-icons">
 
@@ -90,8 +90,8 @@
 
           </div>
 
-    </div> -->
-    <!-- <#%= render 'partials/navbar' %> -->
+    </div>
+    <%= render 'partials/navbar' %>
 
 
       
@@ -108,6 +108,6 @@
 
     <%= yield %>
 
-    <!-- <#%= render 'partials/footer' %> -->
+    <%= render 'partials/footer' %>
   </body>
 </html>
