--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
           <strong><h3><%= @user.username %>'s Profile</h3></strong>
           <!-- <#= link_to "Message", new_conversation_path(@user) %> -->
         <% end %>
+        <%= link_to 'Chat', conversations_path %>
     </div>
     <div style="background-color: #D4AF37; border-radius: 10px; color: black;">
       <div align="center">
