image uploads work and has gallery

--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -58,8 +58,8 @@
             <%= form.text_field :number, id: :business_number, class: "form-control" %>
           </div>
           <div class="col-md-4">
-            <%= form.label :image %>
-            <%= form.file_field :image, class: "form-control" %>
+            <%= form.label :artwork %>
+            <%= form.file_field :artwork, class: "form-control" %>
           </div>
         </div>
 
