--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -118,8 +118,8 @@
 
 
             <div class="form-group">
-              <p><strong> Profile </strong><%= f.label :image %></p>
-              <%= f.file_field :image, class: "form-control" %>
+              <p><strong> Profile </strong><%= f.label :avatar %></p>
+              <%= f.file_field :avatar, class: "form-control" %>
             </div>
 
  
