--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -30,8 +30,8 @@
             <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
           </div>
           <div class="col-md-4">
-            <%= f.label :image %>
-            <%= f.file_field :image, class: "form-control" %>
+            <%= f.label :picture %>
+            <%= f.file_field :picture, class: "form-control" %>
           </div>
         </div>
 
