--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -93,7 +93,7 @@
                             <%= link_to product do %>
                               <div style="height: 200px; width: 200px; opacity: 0.88; padding: 15px; background-color: #D4AF37; border-radius: 5px">
                                   <div style=" height: 110% !important">
-                                    <%= image_tag(product.image.url(:thumb), :class => "thumbs", :id => "thumbs") %>
+                                    <%= image_tag(product.picture, :class => "thumbs", :id => "thumbs") %>
                                   </div>
                               </div>
 
