--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -110,8 +110,8 @@
           <div class="col-md-4">
               <div class="form-group">
                 
-                <%= f.file_field :image, class: "form-control" %>
-               <p><strong> Profile </strong><%= f.label :image %></p>
+                <%= f.file_field :avatar, class: "form-control" %>
+               <p><strong> Profile </strong><%= f.label :avatar %></p>
               </div>
           </div>
         </div>
