--- a/app/views/user_mailer/seller_email.html.erb
+++ b/app/views/user_mailer/seller_email.html.erb
@@ -4,10 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Thank You for adding your product to The Black Woman is God Stores, <%= @user.try(:username) %></h1>
-    <p>
-      Your item is now up and available for sale,
-    </p>
+    <h1>You've made a sale!!</h1>
     <p>
       To login to the site and check out your product, just follow this link: <%= @url %>.
     </p>
