--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -49,17 +49,21 @@
         </div>
 
         <div class="row" style="margin-bottom: 15px">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <%= form.label :business_email %>
             <%= form.email_field :email, id: :business_email, class: "form-control" %>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <%= form.label :business_number %>
             <%= form.text_field :number, id: :business_number, class: "form-control" %>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-3">
             <%= form.label :artwork %>
             <%= form.file_field :artwork, class: "form-control" %>
+          </div>
+          <div class="col-md-3">
+            <%= f.label :selections %>
+            <%= f.file_field :selections, multiple: true, class: "form-control" %>
           </div>
         </div>
 
