dropped bootstrap, imported materialize, configured materialize

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= Gon::Base.render_data %>
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Gugi|Iceland|Monoton|Squada+One" rel="stylesheet">
     <script src="https://checkout.stripe.com/checkout.js"></script>
